--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ h2{
 }
 
 hr{
-    background-color: #f4d4be;
+    background-color: #e48e61;
     height: 25px;
     border: 0;
 }
@@ -71,6 +71,6 @@ hr{
    
 }
 footer{
-    background-color:#f4d4be;
+    background-color:#e48e61;
     text-align: center;
 }
